@@ -4,6 +4,7 @@
   * Support the -statistic option: replace each pixel with corresponding
     statistic from the neighborhood.
   * Add support for -duplicate option.
+  * Move configuration files from /usr/share and /usr/lib to /etc and /var.
 
 2011-03-18 6.6.8-6 Anthony Thyssen <A.Thyssen@griffith...>
   * Replaced Minus and Divide Composition methods with Dst and Src
